- Dialogs aligned on top, lowering a little for each new nested dialog to show the titles of all dialogs. - Fix: Combining hide/show member in a dialog with changing sections displaces the dialog outside screen. - Fix: Actions inside dialog have a wrong visual style.

--- a/OpenXava/web/style/base.css
+++ b/OpenXava/web/style/base.css
@@ -1536,7 +1536,7 @@ input[type="button"] {
 	background: var(--warnings-background);
 }
 
-.ox-action-link {
+.ox-action-link, .ui-widget-content .ox-action-link  { 
     margin-left: 7px;
     color: var(--action-link-color); 
     font-weight: bold;
